--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -236,7 +236,7 @@
     <style name="EditPhotoButtonsText" parent="ButtonsText">
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
     </style>
 
     <style name="LeftMenuButtons">
@@ -726,7 +726,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
     </style>
 
     <style name="Widget.Topface.Button">
@@ -1036,5 +1036,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#8A8A8A</item>
         <item name="android:paddingTop">26dp</item>
+    </style>
+
+    <style name="ComplainsHeader" parent="FormTitleText">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:singleLine">true</item>
     </style>
 </resources>
