--- a/src/main/res/layout/complains_message_fragment.xml
+++ b/src/main/res/layout/complains_message_fragment.xml
@@ -2,26 +2,18 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_main">
+    android:layout_height="match_parent">
 
     <TextView
+        style="@style/ComplainsTitle"
         android:id="@+id/tvReason"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#B8B8B8"
         android:layout_margin="8dp"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/etDescription"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:lines="5"
-        android:gravity="left"
-        android:layout_margin="8dp"
-        android:hint="@string/complain_description"
-        android:layout_below="@id/tvReason" />
+        android:layout_below="@id/tvReason"
+        style="@style/ComplainsMessageEdit"/>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/complainLocker"
