--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1022,15 +1022,8 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/default_line_indicator_selected_color</item>
     </style>
-    
-    <style name="FeedbackEditText" parent="topfaceEditText.Holo">
-        <item name="android:textSize">16sp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:gravity">top|left</item>
-        <item name="android:layout_marginTop">20dp</item>
-    </style>
 
-    <style name="FeedbackTextView">
+    <style name="WhiteBackgroundTitle">
         <item name="android:textSize">16sp</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -1038,10 +1031,31 @@
         <item name="android:paddingTop">26dp</item>
     </style>
 
+    <style name="WhiteBackgroundEdit" parent="topfaceEditText.Holo">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">top|left</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+
+    <style name="FeedbackEditText" parent="WhiteBackgroundEdit"/>
+
+    <style name="FeedbackTextView" parent="WhiteBackgroundTitle"/>
+
     <style name="ComplainsHeader" parent="FormTitleText">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">8dp</item>
         <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ComplainsMessageEdit" parent="WhiteBackgroundEdit">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:hint">@string/complain_description</item>
+    </style>
+
+    <style name="ComplainsTitle" parent="WhiteBackgroundTitle">
+        <item name="android:paddingTop">0dp</item>
     </style>
 </resources>
