--- a/src/main/res/layout/dialog_delete_account.xml
+++ b/src/main/res/layout/dialog_delete_account.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        style="@style/TitleWhiteText"
+        style="@style/TitleBlackText"
         android:layout_marginTop="16dp" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        style="@style/TitleWhiteText"
+        style="@style/TitleBlackText"
         android:layout_marginTop="24dp" />
 
     <LinearLayout
