--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:background="@drawable/popup_invite_text_bg">
+        android:background="@color/bg_white">
 
         <TextView
             android:id="@+id/airMessagesTitle"
@@ -18,9 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:textColor="#FFFFFF"
+            style="@style/TitleBlackText"
             android:textSize="14sp"
-            android:textStyle="bold"
             android:text="@string/general_attention"
             android:minHeight="50dp"/>
 
@@ -30,13 +29,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/airMessagesTitle"
             android:gravity="center"
-            android:textColor="#FFFFFF"
+            style="@style/TitleBlackText"
             android:textSize="13sp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:textStyle="bold"/>
+            android:paddingBottom="15dp" />
 
         <View
             android:id="@+id/fakeView"
