--- a/src/main/res/drawable/gray_list_divider.xml
+++ b/src/main/res/drawable/gray_list_divider.xml
@@ -2,8 +2,9 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
     android:insetLeft="8dp"
     android:insetRight="8dp">
-        <shape
-            android:shape="line">
-            <stroke android:color="@color/gray_divider" android:width="0.5dp"/>
-        </shape>
+    <shape android:shape="line">
+        <stroke
+            android:color="@color/gray_divider"
+            android:width="0.5dp" />
+    </shape>
 </inset>
