--- a/src/main/res/drawable/list_like_btn_pressed.xml
+++ b/src/main/res/drawable/list_like_btn_pressed.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:left="@dimen/item_side_padding" android:right="@dimen/item_side_padding">
+    <item
+        android:left="@dimen/item_side_padding"
+        android:right="@dimen/item_side_padding">
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray_divider"/>
+            <solid android:color="@color/gray_divider" />
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/form_selector_color_pressed_state"/>
+            <solid android:color="@color/form_selector_color_pressed_state" />
         </shape>
     </item>
 </layer-list>
