--- a/src/main/res/layout/fragment_coins_subscription.xml
+++ b/src/main/res/layout/fragment_coins_subscription.xml
@@ -15,6 +15,10 @@
         android:paddingRight="8dp"
         android:paddingBottom="16dp">
 
+        <com.topface.IllustratedTextView.IllustratedTextView
+            android:id="@+id/payReasonFragmentCoinsSubsription"
+            style="@style/PayReasonView" />
+
         <ViewStub
             android:id="@+id/EditorTestStub"
             android:layout="@layout/fragment_buy_editor"
@@ -25,7 +29,7 @@
             android:id="@+id/tvInfoText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@style/TopfaceTextAppearance.Medium"/>
+            style="@style/TopfaceTextAppearance.Medium" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -39,7 +43,7 @@
                 android:id="@+id/tvFirstMonth"
                 style="@style/CoinsSubscriptionBountyText"
                 android:drawableTop="@drawable/icon_coins_first"
-                android:layout_weight="3"/>
+                android:layout_weight="3" />
 
             <ImageView
                 android:id="@+id/ivSecondMonthArrow"
@@ -53,7 +57,7 @@
                 android:id="@+id/tvSecondMonth"
                 style="@style/CoinsSubscriptionBountyText"
                 android:drawableTop="@drawable/icon_coins_second"
-                android:layout_weight="3"/>
+                android:layout_weight="3" />
 
             <ImageView
                 android:id="@+id/ivThirdMonthArrow"
@@ -67,7 +71,7 @@
                 android:id="@+id/tvThirdMonth"
                 style="@style/CoinsSubscriptionBountyText"
                 android:drawableTop="@drawable/icon_coins_third"
-                android:layout_weight="3"/>
+                android:layout_weight="3" />
         </LinearLayout>
 
     </LinearLayout>
