--- a/src/main/res/layout/purchases_fragment.xml
+++ b/src/main/res/layout/purchases_fragment.xml
@@ -2,21 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/purchaseLayout"
     android:layout_width="fill_parent"
-    android:background="#cccccc"
+    android:background="@color/bg_white"
     android:layout_height="fill_parent">
 
-    <com.topface.IllustratedTextView.IllustratedTextView
-        android:id="@+id/payReason"
-        android:layout_width="fill_parent"
-        style="@style/GrayText"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/purchasesTabs"
-        android:gravity="center"
-        android:padding="10dp" />
-
-
     <com.topface.topface.ui.views.slidingtab.SlidingTabLayout
-        android:id="@id/purchasesTabs"
+        android:id="@+id/purchasesTabs"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/tab_background" />
@@ -26,5 +16,5 @@
         android:id="@+id/purchasesPager"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/payReason" />
+        android:layout_below="@id/purchasesTabs" />
 </RelativeLayout>
