--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -164,6 +164,12 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="ItemGrayText">
+        <item name="android:textColor">@color/text_color_gray</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="AccountEditText" parent="ItemWhiteText">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -236,7 +242,7 @@
     <style name="EditPhotoButtonsText" parent="ButtonsText">
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
     </style>
 
     <style name="LeftMenuButtons">
@@ -308,7 +314,7 @@
         <item name="android:lineSpacingExtra">20sp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:fontFamily">Roboto Light</item>
+        <item name="android:fontFamily" tools:ignore="NewApi">Roboto Light</item>
     </style>
 
     <style name="ListItemEmptyText.Bold">
@@ -724,7 +730,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
     </style>
 
     <style name="Widget.Topface.Button">
@@ -747,6 +753,14 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="BlueBonusButton" parent="Widget.Topface.Button.Big.Blue">
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="GrayBonusButton" parent="Widget.Topface.Button.Big.Gray">
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="Widget.Topface.Button.Big.Blue" parent="Widget.Topface.Button.Big">
         <item name="android:background">@drawable/btn_blue_selector</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -758,7 +772,7 @@
     </style>
 
     <style name="ButtonSale" parent="Widget.Topface.Button.Big.Blue">
-        <item name="android:background">@drawable/btn_sale_selector</item>
+        <item name="android:background">@drawable/btn_sale_blue_selector</item>
         <item name="android:paddingRight">56dp</item>
     </style>
 
@@ -951,7 +965,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:minHeight">44dp</item>
         <item name="android:minWidth">240dp</item>
-        <item name="android:fontFamily">Roboto Regular</item>
+        <item name="android:fontFamily" tools:ignore="NewApi">Roboto Regular</item>
     </style>
 
     <style name="FlatButton.Gray">
@@ -1020,7 +1034,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/default_line_indicator_selected_color</item>
     </style>
-    
+
     <style name="FeedbackEditText" parent="topfaceEditText.Holo">
         <item name="android:textSize">16sp</item>
         <item name="android:layout_width">fill_parent</item>
@@ -1034,5 +1048,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#8A8A8A</item>
         <item name="android:paddingTop">26dp</item>
+    </style>
+
+    <style name="PayReasonView" parent="GrayText">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">10dp</item>
     </style>
 </resources>
