--- a/src/main/res/layout/ac_city.xml
+++ b/src/main/res/layout/ac_city.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:my="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/city_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:background="@color/bg_holo">
+    android:background="@color/bg_white">
 
     <com.topface.topface.ui.views.CitySearchView
         android:id="@+id/city_search"
@@ -16,11 +16,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:layout_margin="15dp"
-        android:lines="1"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        my:request_key="CITY_SEARCH_ACTIVITY">
+        app:request_key="CITY_SEARCH_ACTIVITY">
 
         <requestFocus/>
     </com.topface.topface.ui.views.CitySearchView>
