--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1066,6 +1066,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">top|left</item>
         <item name="android:layout_marginTop">20dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
     </style>
 
     <style name="FeedbackEditText" parent="WhiteBackgroundEdit" />
