--- a/src/main/res/layout/invites_popup.xml
+++ b/src/main/res/layout/invites_popup.xml
@@ -1,80 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/loInvitesPopup"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:id="@+id/loInvitesPopup"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/loDialog"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@color/bg_white">
+        android:background="@color/bg_white"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/invitesTitle"
+            style="@style/TitleBlackText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:textSize="14sp"
-            style="@style/TitleBlackText"
-            android:minHeight="50dp"/>
+            android:minHeight="50dp"
+            android:textSize="14sp" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_below="@id/invitesTitle">
+            android:layout_below="@id/invitesTitle"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/checkBoxTitle"
+                style="@style/TitleBlackText"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/checkboxContainer"
-                android:layout_margin="5dp">
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/sendAllContacts"
-                    android:checked="true"
-                    android:layout_alignParentLeft="true"/>
-
-                <TextView
-                    android:id="@+id/checkBoxTitle"
-                    android:layout_width="fill_parent"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    style="@style/TitleBlackText"
-                    android:text="@string/invite_friends_title"
-                    android:layout_toRightOf="@id/sendAllContacts"/>
-            </RelativeLayout>
+                android:gravity="center"
+                android:paddingBottom="5dp"
+                android:text="@string/invite_friends_title_short"
+                android:textSize="14sp" />
 
             <Button
-                style="@style/Widget.Topface.Button.Big.Blue"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
                 android:id="@+id/sendContacts"
-                android:layout_below="@id/checkboxContainer"/>
-        </RelativeLayout>
+                style="@style/Widget.Topface.Button.Big.Blue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
         <ImageView
+            android:id="@+id/ivClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ivClose"
-            android:src="@drawable/ic_close_dialog"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_margin="2dp"/>
+            android:layout_margin="2dp"
+            android:src="@drawable/ic_close_dialog" />
     </RelativeLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/ipLocker"
-        android:visibility="gone"
-        style="@style/LoadingLocker"/>
+        style="@style/LoadingLocker"
+        android:visibility="gone" />
 
 </RelativeLayout>
