--- a/src/main/res/layout/edit_dialog.xml
+++ b/src/main/res/layout/edit_dialog.xml
@@ -6,8 +6,18 @@
     <TextView
         android:id="@+id/edit_dialog_title"
         style="@style/SelectorDialogTitle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/edit_dialog_limit"
+        style="@style/SelectorDialogTitle"
+        android:textColor="@color/text_color_gray_transparent"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
 
     <View
         android:id="@+id/edit_dialog_title_divider"
