--- a/src/main/res/layout/item_buying_btn.xml
+++ b/src/main/res/layout/item_buying_btn.xml
@@ -46,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:paddingLeft="10dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
         android:layout_marginRight="4dp"
         android:textSize="13sp"
         android:background="@drawable/bg_economy"
