--- a/src/main/res/layout/ac_navigation.xml
+++ b/src/main/res/layout/ac_navigation.xml
@@ -4,7 +4,7 @@
     android:id="@+id/loNavigationDrawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_main">
+    android:background="@color/bg_white">
 
     <FrameLayout
         android:id="@+id/fragment_content"
