--- a/src/main/res/layout/layout_empty_visitors.xml
+++ b/src/main/res/layout/layout_empty_visitors.xml
@@ -5,7 +5,8 @@
               android:layout_height="fill_parent"
               android:gravity="center"
               android:orientation="vertical"
-              android:clickable="true">
+              android:clickable="true"
+              android:layout_weight="0.65">
 
     <ImageView
         android:layout_width="wrap_content"
