добавил тему для алерт диалогов lollipop

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1105,4 +1105,8 @@
         <item name="android:drawableRight">@drawable/ic_coins</item>
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="AlertDialogStyle">
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
