--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -39,7 +39,7 @@
         <!-- Стилизованные кнопки -->
         <item name="blueButtonStyle">@style/BlueBonusButton</item>
         <item name="grayButtonStyle">@style/GrayBonusButton</item>
-
+        <item name="android:alertDialogTheme">@style/AlertDialogStyle</item>
         <!-- ActionBar  -->
         <item name="actionBarStyle">@style/Widget.Topface.ActionBar</item>
         <item name="actionBarItemBackground">@drawable/bg_semitransparent_black_selector</item>
