- returns GooglePlayServices availability indicators to Settings

--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -13,6 +13,10 @@
             android:id="@+id/loAccount"
             layout="@layout/item_edit_form_select" />
 
+        <include
+            android:id="@+id/loNoNotifications"
+            layout="@layout/item_settings_no_notifications" />
+
         <TextView
             android:id="@+id/loNotifications"
             style="@style/WhiteListItem.Underline"
