--- a/src/main/res/layout/item_edit_form_select.xml
+++ b/src/main/res/layout/item_edit_form_select.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:tag="tvText"
-        style="@style/ItemtText"
+        style="@style/ItemText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
