--- a/src/main/res/layout/services_manager_layout.xml
+++ b/src/main/res/layout/services_manager_layout.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/loTitle"
-        style="@style/ItemtText"
+        style="@style/ItemText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="6dp"
