--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -163,7 +163,7 @@
         <item name="android:textColor">#9FCCF3</item>
     </style>
 
-    <style name="ItemtText">
+    <style name="ItemText">
         <item name="android:textColor">@color/light_gray</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">normal</item>
