--- a/src/main/res/layout/layout_empty_geo.xml
+++ b/src/main/res/layout/layout_empty_geo.xml
@@ -6,14 +6,14 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="84dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/background_people_close" />
 
