--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -4,7 +4,8 @@
                 android:id="@+id/loInvitesPopup"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black_60_percent">
 
     <RelativeLayout
         android:layout_width="fill_parent"
