--- a/src/main/res/layout/layout_empty_visitors.xml
+++ b/src/main/res/layout/layout_empty_visitors.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:clickable="true"
-              android:layout_weight="0.65">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clickable="true">
 
     <ImageView
+        android:id="@+id/ic_guest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_guest"
-        android:layout_marginBottom="20dp" />
+        android:layout_above="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_guest" />
 
     <TextView
         android:id="@+id/tvText"
+        style="@style/ListItemEmptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/with_vip_find_your_visitors"
-        style="@style/ListItemEmptyText"
-        android:gravity="center" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/with_vip_find_your_visitors" />
 
     <Button
         android:id="@+id/btnBuyVip"
+        style="@style/FlatButton.Blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buying_vip_status"
-        style="@style/FlatButton.Blue"
-        android:layout_marginTop="24dp"
-        android:singleLine="true" />
-</LinearLayout>
+        android:layout_below="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:singleLine="true"
+        android:text="@string/buying_vip_status" />
+</RelativeLayout>
