поправил разметку всех пустых фидов

--- a/src/main/res/layout/layout_empty_likes.xml
+++ b/src/main/res/layout/layout_empty_likes.xml
@@ -12,56 +12,54 @@
 
         <TextView
             android:id="@+id/tvText"
+            style="@style/ListItemEmptyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/likes_can_help_you"
-            style="@style/ListItemEmptyText"
             android:layout_centerInParent="true"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="@string/likes_can_help_you" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvText"
             android:layout_centerHorizontal="true"
-            android:orientation="horizontal"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="24dp" >
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnStartRate"
-                android:layout_width="0dip"
+                style="@style/FlatButton.Blue.Emptyfeed"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/buy_resources"
-                style="@style/FlatButton.Blue" />
+                android:text="@string/buy_resources" />
         </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_sympathy_back"
             android:layout_above="@id/tvText"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="40dp" />
+            android:layout_marginTop="40dp"
+            android:src="@drawable/ic_sympathy_back" />
 
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
         android:gravity="center_horizontal|top"
+        android:orientation="vertical"
         android:paddingTop="24dp">
 
         <TextView
             android:id="@+id/tvTitle"
+            style="@style/ListItemEmptyText.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            style="@style/ListItemEmptyText.Bold"/>
+            android:gravity="center" />
 
         <LinearLayout
             android:layout_width="300dp"
@@ -72,43 +70,43 @@
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivOne"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:src="@drawable/likes_male_one"/>
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivTwo"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:src="@drawable/likes_male_two"/>
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivThree"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:src="@drawable/likes_male_three"/>
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/tvTextOne"
+            style="@style/ListItemEmptyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/likes_buy_vip"
             android:layout_marginTop="16dp"
-            style="@style/ListItemEmptyText"
-            android:maxWidth="300dp"/>
+            android:gravity="center"
+            android:maxWidth="300dp"
+            android:text="@string/likes_buy_vip" />
 
         <Button
             android:id="@+id/btnBuyVip"
+            style="@style/Widget.Topface.Button.Big.Blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/buying_vip_status"
-            style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:text="@string/buying_vip_status" />
 
     </LinearLayout>
 
