--- a/src/main/res/layout/layout_empty_bookmarks.xml
+++ b/src/main/res/layout/layout_empty_bookmarks.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="top|center"
-    android:orientation="vertical">
+    android:clickable="true">
 
     <ImageView
+        android:id="@+id/ic_star"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_star"
-        android:layout_marginTop="40dp"
-        android:gravity="center" />
+        android:layout_above="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_star" />
 
     <TextView
         android:id="@+id/tvText"
         style="@style/ListItemEmptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="24dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="@string/add_bookmarks_to_be_connected" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btnStartRate"
+        style="@style/FlatButton.Blue.Emptyfeed"
+        android:layout_below="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:text="@string/general_get_dating" />
+</RelativeLayout>
