--- a/src/main/res/layout/layout_empty_dialogs.xml
+++ b/src/main/res/layout/layout_empty_dialogs.xml
@@ -1,64 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:clickable="true">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/tvText"
+        style="@style/ListItemEmptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nobody_chat_with_you_sympathies_will_help"
-        style="@style/ListItemEmptyText"
-        android:singleLine="false"
-        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/linearLayout"
-        android:layout_alignStart="@+id/linearLayout"
-        android:layout_alignRight="@+id/linearLayout"
-        android:layout_alignEnd="@+id/linearLayout"
-        android:gravity="center" />
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/nobody_chat_with_you_sympathies_will_help" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:orientation="vertical"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:id="@+id/linearLayout">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btnBuyVip"
-            android:layout_width="240dp"
+            style="@style/FlatButton.Blue.Emptyfeed"
             android:layout_weight="1"
-            android:layout_height="44dp"
-            android:text="@string/buy_resources"
-            style="@style/FlatButton.Blue"
-            android:singleLine="true" />
+            android:text="@string/buy_resources" />
 
         <Button
             android:id="@+id/btnStartRate"
-            android:layout_width="240dp"
+            style="@style/FlatButton.Gray.Emptyfeed"
+            android:layout_marginTop="12dp"
             android:layout_weight="1"
-            android:layout_height="44dp"
-            android:text="@string/general_get_dating"
-            style="@style/FlatButton.Gray"
-            android:singleLine="true"
-            android:layout_marginTop="12dp" />
+            android:text="@string/general_get_dating" />
 
     </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_msg"
         android:layout_above="@id/tvText"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="40dp" />
+        android:src="@drawable/ic_msg" />
 
 </RelativeLayout>
