--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:clickable="true"
-              android:layout_weight="0.6">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clickable="true">
 
     <ImageView
+        android:id="@+id/ic_guitar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_guitar"
-        android:layout_marginBottom="20dp"/>
+        android:layout_above="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_guitar" />
 
     <TextView
         android:id="@+id/tvText"
+        style="@style/ListItemEmptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buy_status_and_watch_your_fans"
-        style="@style/ListItemEmptyText"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:minWidth="270dp"/>
+        android:text="@string/buy_status_and_watch_your_fans" />
 
     <Button
         android:id="@+id/btnBuyVip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/buying_vip_status"
-        style="@style/FlatButton.Blue"
-        android:layout_marginTop="24dp"
-        android:singleLine="true" />
-
-</LinearLayout>
+        style="@style/FlatButton.Blue.Emptyfeed"
+        android:layout_below="@+id/tvText"
+        android:layout_centerHorizontal="true"
+        android:text="@string/buying_vip_status" />
+</RelativeLayout>
