--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -7,9 +7,11 @@
 
     <ImageView
         android:id="@+id/ic_guitar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_above="@+id/tvText"
+        android:scaleType="centerInside"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/ic_guitar" />
 
