--- a/src/main/res/layout/layout_empty_geo.xml
+++ b/src/main/res/layout/layout_empty_geo.xml
@@ -7,13 +7,13 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/background_people_close" />
 
