--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -319,6 +319,7 @@
     </style>
 
     <style name="ListItemEmptyText">
+        <item name="android:fontFamily">"sans-serif-light"</item>
         <item name="android:textColor">@color/text_color_gray</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
