--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -144,8 +144,9 @@
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="TitleWhiteText" parent="ItemTitleText">
+    <style name="TitleGrayText" parent="ItemTitleText">
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/text_color_gray</item>
     </style>
 
     <style name="TitleBlackText" parent="ItemTitleText">
