--- a/src/main/res/drawable/sms_invite_header_background.xml
+++ b/src/main/res/drawable/sms_invite_header_background.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke
-        android:color="#E6E6E6"
-        android:width="1dp" />
-    <corners android:radius="3dp" />
-    <solid android:color="@color/bg_white" />
+    <solid android:color="#E9E9E9" />
+    <padding
+        android:bottom="12dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="12dp" />
 </shape>
