--- a/src/main/res/layout/header_sms_invite.xml
+++ b/src/main/res/layout/header_sms_invite.xml
@@ -2,14 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="12dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="12dp"
-    android:background="@drawable/sms_invite_header_background"
+    android:background="@drawable/sms_invite_header"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="24dp">
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="wrap_content"
