--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -320,7 +320,7 @@
     </style>
 
     <style name="ListItemEmptyText">
-        <item name="android:fontFamily">"sans-serif-light"</item>
+        <item name="android:fontFamily" tools:ignore="NewApi">"sans-serif-light"</item>
         <item name="android:textColor">@color/text_color_gray</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
@@ -1125,4 +1125,12 @@
     <style name="ContactsListName" parent="ListName">
         <item name="android:maxWidth">@null</item>
     </style>
+
+    <style name="SMSInviteText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#1F1F1F</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
