#37393: need to compare when server will start working

--- a/src/main/res/layout/header_sms_invite.xml
+++ b/src/main/res/layout/header_sms_invite.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/ic_add_friend" />
 
     <TextView
+        android:id="@+id/sms_invite_header"
         style="@style/SMSInviteText"
         android:text="@string/premium_for_invitations" />
 </LinearLayout>
